--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@
     --color-dark: hsl(252, 30%, 17%);
     --color-black: hsl(252, 30%, 10%);
 
-    --border-radius:2rem;
-    --card-border-radius:1rem;
-    --btn-padding:0.6rem 2rem;
-    --search-padding:0.6rem 1rem;
-    --card-padding:1rem;
+    --border-radius: 2rem;
+    --card-border-radius: 1rem;
+    --btn-padding: 0.6rem 2rem;
+    --search-padding: 0.6rem 1rem;
+    --card-padding: 1rem;
 
-    --sticky-top-left:5.4rem;
-    --sticky-top-right:-18rem;
-    
+    --sticky-top-left: 5.4rem;
+    --sticky-top-right: -18rem;
+
 
 }
 
@@ -34,6 +34,7 @@
     list-style: none;
     border: none;
 }
+
 body {
 
     font-family: 'Poppins', sans-serif;
@@ -41,24 +42,28 @@ body {
     background: var(--color-light);
     overflow-x: hidden;
 }
+
 /*  GENERAL STYLES  */
-.container{
+.container {
     width: 80%;
     margin: 0 auto;
 }
-.profile-photo{
+
+.profile-photo {
     width: 2.7rem;
     aspect-ratio: 1/1;
     border-radius: 50%;
     overflow: hidden;
 
 }
-img{
+
+img {
     display: block;
     width: 100%;
 
 }
-.btn{
+
+.btn {
     display: inline-block;
     padding: var(--btn-padding);
     font-weight: 500;
@@ -67,23 +72,27 @@ img{
     transition: all .3s ease;
     font-size: 0.9rem;
 }
-.btn:hover{
+
+.btn:hover {
     opacity: .8;
 
 }
-.btn-primary{
+
+.btn-primary {
     background: var(--color-primary);
     color: #fff;
 }
-.texr-bold{
+
+.texr-bold {
     font-weight: 500;
 }
 
-.text-muted{
+.text-muted {
     color: var(--color-gray);
 }
+
 /* ==================== NAVBAR ================ */
-nav{
+nav {
     width: 100%;
     background: var(--color-white);
     padding: 0.7rem 0;
@@ -91,17 +100,20 @@ nav{
     top: 0;
     z-index: 10;
 }
-nav .container{
+
+nav .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-nav .search-bar{
+
+.search-bar {
     background: var(--color-light);
     border-radius: var(--border-radius);
     padding: var(--search-padding);
 }
-nav .search-bar input[type="search"]{
+
+.search-bar input[type="search"] {
     background: transparent;
     width: 30vw;
     margin-left: 1rem;
@@ -109,35 +121,40 @@ nav .search-bar input[type="search"]{
     color: var(--color-dark);
 
 }
-nav .search-bar input[tupe="search"]::placeholder{
+
+.search-bar input[tupe="search"]::placeholder {
     color: var(--color-gray);
 }
-nav .create{
+
+nav .create {
     display: flex;
     align-items: center;
-    gap:  2rem;
+    gap: 2rem;
 }
 
 
 
 /*  ====================== MAIN ================================= */
-main{
-    position: relative;top: 5.4rem;
+main {
+    position: relative;
+    top: 5.4rem;
 }
-main .container{
+
+main .container {
     display: grid;
     grid-template-columns: 18vw auto 20vw;
     column-gap: 2rem;
     position: relative;
 }
-main .container .left
-{
+
+main .container .left {
     height: max-content;
     position: sticky;
     top: var(--sticky-top-left);
 
 }
-main .container .left .profile{
+
+main .container .left .profile {
     padding: var(--card-padding);
     background: var(--color-white);
     border-radius: var(--card-border-radius);
@@ -151,12 +168,13 @@ main .container .left .profile{
 
 /* ----------------------- SIDEBAR ---------------------- */
 
-.left .sidebar{
+.left .sidebar {
     margin-top: 1rem;
     background: var(--color-white);
     border-radius: var(--card-border-radius);
 }
-.left .sidebar .menu-item{
+
+.left .sidebar .menu-item {
 
     display: flex;
     height: 4rem;
@@ -166,19 +184,20 @@ main .container .left .profile{
     position: relative;
 }
 
-.left .sidebar .menu-item:hover{
+.left .sidebar .menu-item:hover {
 
     background: var(--color-light);
-    
+
 }
-.left .sidebar i{
+
+.left .sidebar i {
     font-size: 1.4rem;
     color: var(--color-gray);
     margin-left: 2rem;
     position: relative;
 }
 
-.left .sidebar i .notifications-count{
+.left .sidebar i .notifications-count {
     background: var(--color-danger);
     color: #fff;
     width: fit-content;
@@ -190,23 +209,28 @@ main .container .left .profile{
     right: -0.3rem;
 }
 
-.left .sidebar h3{
-margin-left: 1.5rem;
-font-size: 1rem;
+.left .sidebar h3 {
+    margin-left: 1.5rem;
+    font-size: 1rem;
 
 }
-.left .sidebar h3{
-margin-left: 1.5rem;
-font-size: 1rem;
+
+.left .sidebar h3 {
+    margin-left: 1.5rem;
+    font-size: 1rem;
 
 }
-.left .sidebar .active{
+
+.left .sidebar .active {
     background: var(--color-light);
 }
-.left .sidebar .active i ,.left .sidebar .active h3 {
+
+.left .sidebar .active i,
+.left .sidebar .active h3 {
     color: var(--color-primary);
 }
-.left .sidebar .active::before{
+
+.left .sidebar .active::before {
     position: absolute;
     content: '';
     display: block;
@@ -214,16 +238,18 @@ font-size: 1rem;
     height: 100%;
     background: var(--color-primary);
 }
-.left .sidebar .menu-item:first-child.active{
+
+.left .sidebar .menu-item:first-child.active {
     border-top-left-radius: var(--card-border-radius);
     overflow: hidden;
 }
-.left .sidebar .menu-item:last-child.active{
+
+.left .sidebar .menu-item:last-child.active {
     border-bottom-left-radius: var(--card-border-radius);
     overflow: hidden;
 }
 
-.left .btn{
+.left .btn {
     margin-top: 1rem;
     width: 100%;
     text-align: center;
@@ -234,7 +260,7 @@ font-size: 1rem;
 
 /* -------------------------------- NOTIFICATIONS POPUP  ------------------------- */
 
-.left .notifications-popup{
+.left .notifications-popup {
     position: absolute;
     top: 0;
     left: 110%;
@@ -242,11 +268,12 @@ font-size: 1rem;
     background: var(--color-white);
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
-    box-shadow:  0 0 2rem hsl(var(--color-primary), 75%, 60% 25%);
+    box-shadow: 0 0 2rem hsl(var(--color-primary), 75%, 60% 25%);
     z-index: 8;
+    display: none;
 }
 
-.left .notifications-popup::before{
+.left .notifications-popup::before {
     content: "";
     width: 1.2rem;
     height: 1.2rem;
@@ -256,3 +283,242 @@ font-size: 1rem;
     left: -0.6rem;
     transform: rotate(45deg);
 }
+
+
+.left .notifications-popup>div {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 1rem;
+
+}
+
+.left .notifications-popup small {
+    display: block;
+}
+
+/* -------------------------------- END NOTIFICATIONS POPUP  ------------------------- */
+
+/* -------------------------------- MIDDEL ------------------------- */
+
+.middle {}
+
+.middle .stories {
+
+    display: flex;
+    justify-content: center;
+    height: 12rem;
+    gap: 0.5rem;
+    background: var();
+}
+
+.middle .stories .story {
+
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    font-size: 0.75rem;
+    width: 100%;
+    background: rgb(255, 0, 0);
+    position: relative;
+    overflow: hidden;
+}
+
+.middle .stories .story::before {
+
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 5rem;
+    background:linear-gradient(transparent,rgba(0,0,0,.75));
+    bottom: 0;
+    /* z-index: -1; */
+}
+
+.middle .stories .story .name {
+    z-index: 2;
+}
+
+.middle .stories .story:nth-child(1) {
+    background: url(./images/story-1.jpg) no-repeat center center / cover;
+}
+
+.middle .stories .story:nth-child(2) {
+    background: url(./images/story-2.jpg) no-repeat center center / cover;
+}
+
+.middle .stories .story:nth-child(3) {
+    background: url(./images/story-3.jpg) no-repeat center center / cover;
+}
+
+.middle .stories .story:nth-child(4) {
+    background: url(./images/story-4.jpg) no-repeat center center / cover;
+}
+
+.middle .stories .story:nth-child(5) {
+    background: url(./images/story-5.jpg) no-repeat center center / cover;
+}
+
+.middle .stories .story:nth-child(6) {
+    background: url(./images/story-6.jpg) no-repeat center center / cover;
+}
+
+
+.middle .story .profile-photo{
+    width: 2rem;
+    height: 2rem;
+    align-self: flex-start;
+    border: 2px solid var(--color-primary);
+}
+/* -------------------------------- CREATE POST  ------------------------- */
+
+.middle .create-post{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1rem;
+    background: var(--color-white);
+    padding: 0.4rem var(--card-padding);
+    border-radius: var(--border-radius);
+
+
+}
+.middle .create-post input[type='text']{
+    justify-self: start;
+    width: 100%;
+    padding-left: 1rem;
+    background: transparent;
+    color: var(--color-dark);
+    margin-right: 1rem;
+}
+
+/* -------------------------------- END CREATE POST  ------------------------- */
+
+/* -------------------------- FEEDS ----------------------------- */
+    .middle .feeds{}
+    .middle .feeds .feed{
+        background: var(--color-white);
+        border-radius: var(--border-radius);
+        padding: var(--card-padding);
+        margin: 1rem 0;
+        font-size: 0.85rem;
+        line-height: 1.5;
+    }
+    .middle .feed .head{
+       display: flex;
+       justify-content: space-between;
+    }
+    .middle .feed .user{
+       display: flex;
+       gap: 1rem;
+    }
+
+    .middle .feed .photo{
+       border-radius: var(--card-border-radius);
+       overflow: hidden;
+       margin: 0.7rem 0;
+    }
+    .middle .feed .action-buttons{
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+       font-size: 1.4rem;
+       margin: 0.6rem;
+    }
+    .middle .liked-by{
+        display: flex;
+        
+    }
+    .middle .liked-by > span{
+        width: 1.4rem;
+        height: 1.4rem;
+        display: block;
+        border-radius: 50%;
+        overflow: hidden;
+        border: 2px solid var(--color-white);
+        margin-left: -0.6rem;
+
+    }
+    .middle .liked-by > span:first-child{
+        margin: 0;
+
+    }
+    .middle .liked-by > p{
+        margin-left: .5rem;
+
+
+    }
+/* -------------------------- END FEEDS ----------------------------- */
+/* -------------------------------- END MIDDEL ------------------------- */
+
+
+
+/* -------------------------------- RIGHT ------------------------- */
+
+.main .contianer .right{
+    height: max-content;
+    position: sticky;
+    top: var(--sticky-top-right);
+    bottom: 0;
+}
+.right{
+
+}
+.right .messages{
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    padding: var(--card-padding);
+}
+.right .messages .heading{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+.right .messages > i{
+    font-size: 1.4rem;
+}
+.right .messages .search-bar{
+    display: flex;
+    margin-bottom: 1rem;
+}
+
+.right .messages .category{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.right .messages .category h6{
+    width: 100%;
+    text-align: center;
+    border-bottom: 4px solid var(--color-light);
+    padding-bottom: 0.5rem;
+    font-size: 0.85rem;
+}
+.right .messages .category .active{
+  border-color: var(--color-dark);
+}
+.right .messages .message{
+  display: flex;
+  align-items: start;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.right .messages .message:last-child{
+  margin: 0;
+}
+
+.right .messages .message p{
+    font-size: 0.8rem;
+  }
+
+
+
+/* ------------------------------ END RIGHT ----------------------- */
