--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ main .container .left .profile {
     display: block;
     width: 100%;
     height: 5rem;
-    background:linear-gradient(transparent,rgba(0,0,0,.75));
+    background: linear-gradient(transparent, rgba(0, 0, 0, .75));
     bottom: 0;
     /* z-index: -1; */
 }
@@ -369,15 +369,16 @@ main .container .left .profile {
 }
 
 
-.middle .story .profile-photo{
+.middle .story .profile-photo {
     width: 2rem;
     height: 2rem;
     align-self: flex-start;
     border: 2px solid var(--color-primary);
 }
+
 /* -------------------------------- CREATE POST  ------------------------- */
 
-.middle .create-post{
+.middle .create-post {
     width: 100%;
     display: flex;
     align-items: center;
@@ -389,7 +390,8 @@ main .container .left .profile {
 
 
 }
-.middle .create-post input[type='text']{
+
+.middle .create-post input[type='text'] {
     justify-self: start;
     width: 100%;
     padding-left: 1rem;
@@ -401,59 +403,68 @@ main .container .left .profile {
 /* -------------------------------- END CREATE POST  ------------------------- */
 
 /* -------------------------- FEEDS ----------------------------- */
-    .middle .feeds{}
-    .middle .feeds .feed{
-        background: var(--color-white);
-        border-radius: var(--border-radius);
-        padding: var(--card-padding);
-        margin: 1rem 0;
-        font-size: 0.85rem;
-        line-height: 1.5;
-    }
-    .middle .feed .head{
-       display: flex;
-       justify-content: space-between;
-    }
-    .middle .feed .user{
-       display: flex;
-       gap: 1rem;
-    }
+.middle .feeds {}
 
-    .middle .feed .photo{
-       border-radius: var(--card-border-radius);
-       overflow: hidden;
-       margin: 0.7rem 0;
-    }
-    .middle .feed .action-buttons{
-       display: flex;
-       justify-content: space-between;
-       align-items: center;
-       font-size: 1.4rem;
-       margin: 0.6rem;
-    }
-    .middle .liked-by{
-        display: flex;
-        
-    }
-    .middle .liked-by > span{
-        width: 1.4rem;
-        height: 1.4rem;
-        display: block;
-        border-radius: 50%;
-        overflow: hidden;
-        border: 2px solid var(--color-white);
-        margin-left: -0.6rem;
+.middle .feeds .feed {
+    background: var(--color-white);
+    border-radius: var(--border-radius);
+    padding: var(--card-padding);
+    margin: 1rem 0;
+    font-size: 0.85rem;
+    line-height: 1.5;
+}
 
-    }
-    .middle .liked-by > span:first-child{
-        margin: 0;
+.middle .feed .head {
+    display: flex;
+    justify-content: space-between;
+}
 
-    }
-    .middle .liked-by > p{
-        margin-left: .5rem;
+.middle .feed .user {
+    display: flex;
+    gap: 1rem;
+}
+
+.middle .feed .photo {
+    border-radius: var(--card-border-radius);
+    overflow: hidden;
+    margin: 0.7rem 0;
+}
+
+.middle .feed .action-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.4rem;
+    margin: 0.6rem;
+}
+
+.middle .liked-by {
+    display: flex;
+
+}
+
+.middle .liked-by>span {
+    width: 1.4rem;
+    height: 1.4rem;
+    display: block;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid var(--color-white);
+    margin-left: -0.6rem;
+
+}
+
+.middle .liked-by>span:first-child {
+    margin: 0;
+
+}
+
+.middle .liked-by>p {
+    margin-left: .5rem;
 
 
-    }
+}
+
 /* -------------------------- END FEEDS ----------------------------- */
 /* -------------------------------- END MIDDEL ------------------------- */
 
@@ -461,71 +472,141 @@ main .container .left .profile {
 
 /* -------------------------------- RIGHT ------------------------- */
 
-.main .contianer .right{
+.main .contianer .right {
     height: max-content;
     position: sticky;
     top: var(--sticky-top-right);
     bottom: 0;
 }
-.right{
 
-}
-.right .messages{
+.right {}
+
+.right .messages {
     background: var(--color-white);
     border-radius: var(--card-border-radius);
     padding: var(--card-padding);
 }
-.right .messages .heading{
+
+.right .messages .heading {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 1rem;
 }
-.right .messages > i{
+
+.right .messages>i {
     font-size: 1.4rem;
 }
-.right .messages .search-bar{
+
+.right .messages .search-bar {
     display: flex;
     margin-bottom: 1rem;
 }
 
-.right .messages .category{
+.right .messages .category {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;
 }
 
-.right .messages .category h6{
+.right .messages .category h6 {
     width: 100%;
     text-align: center;
     border-bottom: 4px solid var(--color-light);
     padding-bottom: 0.5rem;
     font-size: 0.85rem;
 }
-.right .messages .category .active{
-  border-color: var(--color-dark);
-}
-.right .messages .message{
-  display: flex;
-  align-items: start;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-.right .messages .message:last-child{
-  margin: 0;
+
+.right .messages .category .active {
+    border-color: var(--color-dark);
 }
 
-.right .messages .message p{
+.right .messages .category .messages-requests{
+    color: var(--color-primary);
+}
+
+
+.right .messages .message {
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+
+.right .message .profile-photo {
+    position: relative;
+    overflow: visible;
+
+}
+
+.right .profile-photo img {
+    border-radius: 50%;
+}
+
+
+.right .messages .message:last-child {
+    margin: 0;
+}
+
+.right .messages .message p {
     font-size: 0.8rem;
-  }
-.right .messages .message .profile-photo .active{
+}
+
+.right .message .profile-photo .active {
     width: 0.8rem;
-    height: 0rem;
+    height: 0.8rem;
     border-radius: 50%;
     border: 3px solid var(--color-white);
     font-size: 0.8rem;
-  }
+    background: var(--color-success);
+    position: absolute;
+    bottom: 0;
+    right: 0;
 
+}
+
+.right .friend-requests{
+    margin-top: 1rem;
+
+    
+}
+.right .friend-requests h4{
+    color: var(--color-gray);
+    margin-top: 1rem;
+    
+}
+.right .friend-requests .request{
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-bottom: 0.7rem;
+
+}
+.right .request .info{
+    display: flex;
+    gap: 1rem;
+    margin-bottom: 1rem;
+}
+    
+.right .request .action{
+    display: flex;
+    gap: .5rem;
+
+}
+    
 
 
 /* ------------------------------ END RIGHT ----------------------- */
+
+
+
+
+
+/* **======================================== THME CUSTOMIZATION ================================= */
+
+.customize-theme{
+    background: rgba(255, 255, 255, 0.5);
+    width: 1000vw;
+    height: 100vh;
+    position: fixed;
+}
